[package]
name = "lz_quic"
version = "0.1.0"
authors = ["Luke Horsley <luke.horsley@offset1337.co.uk>"]
build = "build.rs"

[dependencies]
error-chain = "0.10.0"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
bitflags = "0.8.2"
byteorder = "1.0.0"
rand = "0.3.15"
chrono = "0.3.0"
futures = "0.1.13"
conv = "0.3.3"
hex = "0.2.0"
num = "0.1.37"
fnv = "1.0.5"
flate2 = { git = "https://github.com/Lukazoid/flate2-rs.git", branch = "set-dictionary", features = ["zlib"] }
itertools = "0.6.0"
lazy_static = "0.2.6"
lz_fnv = { version = "0.1.1", features = ["u128"] }
openssl = "0.9.11"
ring = "0.9.7"
webpki = "0.12.1"
untrusted = "0.5.0"
smallvec = "0.3.3"
time = "0.1.37"
extprim = "1.4.0"

[dev-dependencies]
matches = "0.1.4"
webpki-roots = "0.10.0"

[build-dependencies]
vergen = "0.1.1"