[package]
name = "lz_quic"
version = "0.1.0"
authors = ["Luke Horsley <luke.horsley@offset1337.co.uk>"]
build = "build.rs"

[dependencies]
error-chain = "0.10.0"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
bitflags = "0.8.2"
byteorder = "1.0.0"
rand = "0.3.15"
chrono = "0.3.0"
futures = "0.1.18"
conv = "0.3.3"
hex = "0.2.0"
num = "0.1.37"
flate2 = { git = "https://github.com/alexcrichton/flate2-rs", features = ["zlib"] }
itertools = "0.6.0"
lazy_static = "0.2.6"
lz_fnv = { version = "0.1.1", features = ["u128"] }
ring = { version = "0.13.0-alpha", features = ["rsa_signing"] }
webpki = "0.18.0-alpha"
untrusted = "0.6.1"
smallvec = "0.4.3"
time = "0.1.37"
lz_diet = "0.1.3"
extprim = "1.4.0"
binary-tree = "0.2.0"
matches = "0.1.6"
bytes = "0.4.5"
log = "0.3.8"
debugit = "0.1.2"
rustls = "0.12.0" 
tokio-rustls = "0.5.0" 
lz_shared_udp = "0.1.1"
lz_stream_io = "0.1.0"
maplit = "1.0.1"

[dev-dependencies]
webpki-roots = "0.14.0"

[build-dependencies]
vergen = "0.1.1"

[features]
unstable = []