[package]
name = "lz_quic"
version = "0.1.0"
authors = ["Luke Horsley <luke.horsley@offset1337.co.uk>"]
build = "build.rs"

[dependencies]
binary-tree = "0.2.0"
bitflags = "0.8.2"
byteorder = { version = "1.0.0", features = ["i128"] }
bytes = "0.4.8"
chrono = "0.3.0"
conv = "0.3.3"
debugit = "0.1.2"
error-chain = "0.10.0"
flate2 = { git = "https://github.com/alexcrichton/flate2-rs", features = ["zlib"] }
futures = "0.1.18"
hex = "0.2.0"
itertools = "0.6.0"
lazy_static = "0.2.6"
log = "0.3.8"
lz_diet = "0.1.3"
lz_fnv = { version = "0.1.1", features = ["u128"] }
lz_shared_udp = "0.1.2"
maplit = "1.0.1"
matches = "0.1.6"
num = "0.1.37"
rand = "0.3.15"
ring = { version = "0.13.0-alpha", features = ["rsa_signing"] }
rustls = "0.12.0" 
smallvec = "0.6.1"
time = "0.1.37"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
tokio-rustls = "0.5.0" 
untrusted = "0.6.1"
webpki = "0.18.0-alpha"

[dev-dependencies]
env_logger = "0.5.10"
webpki-roots = "0.14.0"

[build-dependencies]
vergen = "0.1.1"

[features]
unstable = []